# V851S_LVGL_OPENCV

./: CMakeLists.txt  Makefile  app_gpio.c  app_gpio.h  app_uart.c  app_uart.h  build.sh  cam_thread.cpp  cam_thread.h  lv_100ask_lesson_demos_conf.h  lv_conf.h  lv_port_indev.c  main.c  stream_thread.cpp  stream_thread.h  sync_to_gitee.sh  sync_to_github.sh  user_cross_compile_setup.cmake  wifi_manager.c  wifi_manager.h  同步代码.bat
.claude/: settings.local.json
lv_100ask_lesson_demos/: lv_100ask_lesson_demos.h  lv_100ask_lesson_demos_conf_template.h
lv_100ask_lesson_demos/assets/: lv_my_fa_30.c
lv_100ask_lesson_demos/src/lesson_10_1/: lesson_10_1.c  lesson_10_1.h
lv_100ask_lesson_demos/src/lesson_10_2/: lesson_10_2.c  lesson_10_2.h
lv_100ask_lesson_demos/src/lesson_10_3/: lesson_10_3.c  lesson_10_3.h
lv_100ask_lesson_demos/src/lesson_10_4/: lesson_10_4.c  lesson_10_4.h
lv_100ask_lesson_demos/src/lesson_2_3_1/: lesson_2_3_1.c
lv_100ask_lesson_demos/src/lesson_3_18_1/: lesson_3_18_1.c
lv_100ask_lesson_demos/src/lesson_3_1_1/: lesson_3_1_1.c
lv_100ask_lesson_demos/src/lesson_3_23_1/: lesson_3_23_1.c  lesson_3_23_1.h
lv_100ask_lesson_demos/src/lesson_3_24_1/: lesson_3_24_1.c  lesson_3_24_1.h
lv_100ask_lesson_demos/src/lesson_3_25_1/: lesson_3_25_1.c  lesson_3_25_1.h
lv_100ask_lesson_demos/src/lesson_3_26_1/: lesson_3_26_1.c  lesson_3_26_1.h
lv_100ask_lesson_demos/src/lesson_4_1/: lesson_4_1.c  (+1 more)
lvgl/src/: lv_init.c
opencv_camera_mobilenet_v2_ssd/: build
opencv_camera_mobilenet_v2_ssd/src/: CMakeLists.txt  Makefile  main.cpp
scripts/: S99main
(+61 files in other folders)
